[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/Endgame/Endgame.gd" type="Script" id=1]
[ext_resource path="res://assets/gui/olay_win.png" type="Texture" id=2]
[ext_resource path="res://assets/gui/gui-text_cool.png" type="Texture" id=3]
[ext_resource path="res://assets/gui/olay_lose.png" type="Texture" id=4]
[ext_resource path="res://assets/gui/gui-text_oops.png" type="Texture" id=5]
[ext_resource path="res://assets/gui/gui_text-airs.png" type="Texture" id=6]
[ext_resource path="res://assets/gui/gui_button-tryagain.png" type="Texture" id=7]
[ext_resource path="res://assets/fonts/Sniglet-ExtraBold.otf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 124
outline_size = 10
use_filter = true
font_data = ExtResource( 8 )

[sub_resource type="Animation" id=3]
resource_name = "lose"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("olay_lose/gui-text_oops:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lbl_airs:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("gui_text-airs:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 850, 610 ), Vector2( 520, 610 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TryAgain:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3.5, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "win"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("olay_win/gui-text_cool:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("lbl_airs:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1.5, 2.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("gui_text-airs:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3, 3.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 850, 610 ), Vector2( 520, 610 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("TryAgain:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3.5, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="Endgame" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="olay_win" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )
centered = false

[node name="gui-text_cool" type="Sprite" parent="olay_win"]
position = Vector2( 350.393, 250.079 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 3 )

[node name="olay_lose" type="Sprite" parent="."]
visible = false
texture = ExtResource( 4 )
centered = false

[node name="gui-text_oops" type="Sprite" parent="olay_lose"]
position = Vector2( 350.393, 253.094 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )

[node name="gui_text-airs" type="Sprite" parent="."]
position = Vector2( 844.077, 610 )
texture = ExtResource( 6 )

[node name="TryAgain" type="TextureButton" parent="."]
visible = false
margin_left = 98.4531
margin_top = 930.03
margin_right = 646.453
margin_bottom = 1129.03
texture_normal = ExtResource( 7 )

[node name="lbl_airs" type="Label" parent="."]
margin_left = 4.22263
margin_top = 527.869
margin_right = 396.223
margin_bottom = 840.869
rect_scale = Vector2( 0.132018, 0.132018 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.407843, 0.682353, 0.831373, 1 )
custom_colors/font_outline_modulate = Color( 1, 1, 1, 1 )
text = "6789"
align = 2
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/lose = SubResource( 3 )
anims/win = SubResource( 2 )
[connection signal="pressed" from="TryAgain" to="." method="_on_TryAgain_pressed"]
